# app/serializers/api/v1/user_blueprint.rb
@@ -3,7 +3,18 @@ module Api
     class UserBlueprint < Blueprinter::Base
       identifier :id
 
-      fields :email, :name, :admin, :created_at, :updated_at
+      fields :email,
+             :name,
+             :age,
+             :height_ft,
+             :height_inches,
+             :weight_lbs,
+             :activity_level,
+             :goal,
+             :time_zone,
+             :admin,
+             :created_at,
+             :updated_at
     end
   end
 end
