# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.1].define(version: 2026_09_08_120000) do
+ActiveRecord::Schema[8.1].define(version: 2026_09_09_150000) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -489,7 +489,9 @@ ActiveRecord::Schema[8.1].define(version: 2026_09_08_120000) do
   end
 
   create_table "users", force: :cascade do |t|
+    t.integer "activity_level"
     t.boolean "admin", default: false, null: false
+    t.integer "age"
     t.boolean "allow_password_change", default: false
     t.datetime "confirmation_sent_at"
     t.string "confirmation_token"
@@ -498,6 +500,9 @@ ActiveRecord::Schema[8.1].define(version: 2026_09_08_120000) do
     t.datetime "deleted_at"
     t.string "email"
     t.string "encrypted_password", default: "", null: false
+    t.string "goal"
+    t.integer "height_ft"
+    t.integer "height_inches"
     t.string "image"
     t.string "name"
     t.string "nickname"
@@ -505,10 +510,12 @@ ActiveRecord::Schema[8.1].define(version: 2026_09_08_120000) do
     t.datetime "remember_created_at"
     t.datetime "reset_password_sent_at"
     t.string "reset_password_token"
+    t.string "time_zone"
     t.json "tokens"
     t.string "uid", default: "", null: false
     t.string "unconfirmed_email"
     t.datetime "updated_at", null: false
+    t.decimal "weight_lbs", precision: 7, scale: 2
     t.index ["confirmation_token"], name: "index_users_on_confirmation_token", unique: true
     t.index ["deleted_at"], name: "index_users_on_deleted_at"
     t.index ["email"], name: "index_users_on_email", unique: true
